--- a/templates/index.html
+++ b/templates/index.html
@@ -2,38 +2,23 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Painel de Produção</title>
+    <title>Calculadora de vídeo</title>
     <style>
+        h1{font-size: 2.2em; color: #333; text-align: center; margin-bottom: 20px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
         .dashboard { display: flex; gap: 20px; justify-content: center; padding: 20px; }
         .card { border: 1px solid #ddd; padding: 20px; border-radius: 8px; width: 300px; background: #f9f9f9; }
-        h2 { font-size: 1.2em; color: #333; }
+        h2 { font-size: 1.2em; color: #333; text-align: center; margin-top: -2px}
         .res { margin-top: 50px; font-weight: bold; color: blue; }
-        input {
-    width: 100%;
-    padding: 8px;
-    margin: 5px 0;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 10px;
-}
-button:hover { background-color: #0056b3; }
+        input {width: 100%; padding: 8px; margin: 5px 0; box-sizing: border-box; border: 1px solid #ccc; border-radius: 4px;}
+        button {width: 100%; padding: 10px; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer; margin-top: 10px;}
+        button:hover { background-color: #0056b3; }
     </style>
 </head>
 <body>
-
+<h1>Calculadora de vídeo</h1>
 <div class="dashboard">
     <div class="card">
-        <h2>⏱️ Frames para Tempo</h2>
+        <h2>Frames para Tempo</h2>
         <form action="/frames" method="post">
             <input type="number" name="framerate" placeholder="FPS">
             <input type="number" name="totalframes" placeholder="Total Frames">
@@ -43,7 +28,7 @@ button:hover { background-color: #0056b3; }
     </div>
 
     <div class="card">
-        <h2>⚡ Frames para MS</h2>
+        <h2>Frames para MS</h2>
         <form action="/ms" method="post">
             <input type="number" name="fps_ms" placeholder="FPS">
             <input type="number" name="frames_ms" placeholder="Frames">
