--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
             <input type="number" name="horas" placeholder="Horas">
             <input type="number" name="minutos" placeholder="Minutos">
             <input type="number" name="segundos" placeholder="Segundos">
-            <input type="number" name="frames" placeholder="Frames">
+            <input type="number" name="frames2" placeholder="Frames">
             <button type="submit">Calcular</button>
         </form>
         {% if res_time %}<div class="res">{{ res_time }}</div>{% endif %}
