--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
         <div class="card">
         <h2>Tempo para frames</h2>
         <form action="/time" method="post">
-            <input type="number" name="fps2" placeholder="FPS">
+            <input type="number" name="fps2" placeholder="FPS" step="any">
             <input type="number" name="horas" placeholder="Horas">
             <input type="number" name="minutos" placeholder="Minutos">
             <input type="number" name="segundos" placeholder="Segundos">
